--- a/template.html
+++ b/template.html
@@ -7,24 +7,18 @@
   <title>Temperature and Humidity</title>
   <style>
     :root {
-      --font-color-default: #262626;
-      --border-color-default: #D0D7DE;
-      --background-color: #F8FAFC;
-      --code-background-color: #F6F8FA;
-      --code-background-color-2: rgba(0, 0, 0, 0.08);
-      --monospace-font: 'Roboto Mono', monospace;
-      --serif-font: Georgia, serif;
-      --sans-serif-font: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+      --font-color: #262626;
+      --border-color: #D0D7DE;
+      --font: 'Roboto Mono', monospace;
     }
 
     body {
       max-width: 800px;
       margin: 0 auto;
-      color: var(--font-color-default);
+      color: var(--font-color);
       padding: 1rem;
       font-weight: 400;
-      font-family: var(--monospace-font);
-      /* background-color: var(--background-color); */
+      font-family: var(--font);
       line-height: 1.6;
     }
 
@@ -37,7 +31,7 @@
     td,
     th {
       padding: .5rem;
-      border: 1px solid var(--border-color-default);
+      border: 1px solid var(--border-color);
     }
 
     img {
