--- a/template.html
+++ b/template.html
@@ -47,7 +47,10 @@
 
     </p>
     <p>
-      Temperature: <b>__TEMPERATURE__°C</b>, Humidity: <b>__HUMIDITY__%</b>, last update at <b>__TIMESTAMP__</b>
+      Temperature: <b>__TEMPERATURE__°C</b>, Humidity: <b>__HUMIDITY__%</b>, measured at <b>__TIMESTAMP__</b>
+    </p>
+    <p>
+      Last updated at __NOW__.
     </p>
     <div>
       <img src="./__IMAGE__" alt="">
