--- a/template.html
+++ b/template.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="60">
   <title>Temperature and Humidity</title>
   <style>
     :root {
