--- a/template.html
+++ b/template.html
@@ -45,13 +45,10 @@
   <div>
     <h1>Temperature and Humidity</h1>
     <p>
-
-    </p>
-    <p>
       Temperature: <b>__TEMPERATURE__°C</b>, Humidity: <b>__HUMIDITY__%</b>, measured at <b>__TIMESTAMP__</b>
     </p>
     <p>
-      Last updated at __NOW__.
+      Last update from <i>__HOSTNAME__</i> at __NOW__.
     </p>
     <div>
       <img src="./__IMAGE__" alt="">
