--- a/template.html
+++ b/template.html
@@ -51,7 +51,13 @@
       Last update from <i>__HOSTNAME__</i> at __NOW__.
     </p>
     <div>
-      <img src="./__IMAGE__" alt="">
+      <h2>Today</h2>
+      <img src="./__IMAGE_1__" alt="">
+
+    </div>
+    <div>
+      <h2>All Time</h2>
+      <img src="./__IMAGE_2__" alt="">
     </div>
   </div>
 </body>
