--- a/template.html
+++ b/template.html
@@ -47,6 +47,10 @@
     <p>
       Temperature: <b>__TEMPERATURE__°C</b>, Humidity: <b>__HUMIDITY__%</b>, measured at <b>__TIMESTAMP__</b>
     </p>
+    <h2>Records:</h2>
+    <p>
+      Max Temperature: __MAX_TEMPERATURE__, Max Humidity: __MAX_HUMIDITY__
+    </p>
     <p>
       Last update from <i>__HOSTNAME__</i> at __NOW__.
     </p>
