--- a/template.html
+++ b/template.html
@@ -47,20 +47,19 @@
     <p>
       Temperature: <b>__TEMPERATURE__°C</b>, Humidity: <b>__HUMIDITY__%</b>, measured at <b>__TIMESTAMP__</b>
     </p>
+    <p>
+      Last update from <i>__HOSTNAME__</i> at __NOW__.
+    </p>
     <h2>Records:</h2>
     <p>
       Max Temperature: __MAX_TEMPERATURE__, Max Humidity: __MAX_HUMIDITY__
     </p>
-    <p>
-      Last update from <i>__HOSTNAME__</i> at __NOW__.
-    </p>
     <div>
-      <h2>Today</h2>
+      <h2>Last 24 Hours:</h2>
       <img src="./__IMAGE_1__" alt="">
-
     </div>
     <div>
-      <h2>All Time</h2>
+      <h2>All Time:</h2>
       <img src="./__IMAGE_2__" alt="">
     </div>
   </div>
