--- a/template.html
+++ b/template.html
@@ -54,6 +54,9 @@
     <p>
       Max Temperature: __MAX_TEMPERATURE__, Max Humidity: __MAX_HUMIDITY__
     </p>
+    <p>
+      Min Temperature: __MIN_TEMPERATURE__, Min Humidity: __MIN_HUMIDITY__
+    </p>
     <div>
       <h2>Last 24 Hours:</h2>
       <img src="./__IMAGE_1__" alt="">
