add average temperature

--- a/template.html
+++ b/template.html
@@ -59,6 +59,9 @@
     </p>
     <div>
       <h2>Last 24 Hours:</h2>
+      <p>
+        Average Temperature: __AVG_TEMPERATURE__
+      </p>
       <img src="./__IMAGE_1__" alt="">
     </div>
     <div>
