--- a/template.html
+++ b/template.html
@@ -52,15 +52,15 @@
     </p>
     <h2>Records 🥵</h2>
     <p>
-      Max temperature: __MAX_TEMPERATURE__ °C, humidity: __MAX_HUMIDITY__%
+      Temperature: __MAX_TEMPERATURE__
     </p>
     <p>
-      Min temperature: __MIN_TEMPERATURE__ °C, humidity: __MIN_HUMIDITY__
+      Humidity: __MIN_TEMPERATURE__
     </p>
     <div>
       <h2>Last 24 Hours ⌛</h2>
       <p>
-        Average Temperature: __AVG_TEMPERATURE__
+        __AVG_TEMPERATURE__
       </p>
       <img src="./__IMAGE_1__" alt="">
     </div>
