--- a/template.html
+++ b/template.html
@@ -45,27 +45,34 @@
   <div>
     <h1>Temperature and Humidity 🌡️</h1>
     <p>
-      Current temperature: <b>__TEMPERATURE__°C</b>, humidity: <b>__HUMIDITY__%</b>, measured at <b id="measure_time">__TIMESTAMP__</b>
+      Current temperature: <b>__TEMPERATURE__°C</b>, humidity: <b>__HUMIDITY__%</b>, measured at <b
+        id="measure_time">__TIMESTAMP__</b>
     </p>
     <p>
       Last update from <i>__HOSTNAME__</i> at <span id="update_time">__NOW__</span>.
     </p>
     <h2>Records 🥵</h2>
     <p>
-      Temperature: __MAX_TEMPERATURE__
+      Temperature: __All_TIME_TEMPERATURE__
     </p>
     <p>
-      Humidity: __MIN_TEMPERATURE__
+      Humidity: __All_TIME_HUMIDITY__
     </p>
     <div>
       <h2>Last 24 Hours ⌛</h2>
       <p>
-        __AVG_TEMPERATURE__
+        Temperature: __TODAY_TEMPERATURE__
       </p>
       <img src="./__IMAGE_1__" alt="">
     </div>
     <div>
       <h2>All Time 📈</h2>
+      <p>
+        Temperature: __All_TIME_TEMPERATURE__
+      </p>
+      <p>
+        Humidity: __All_TIME_HUMIDITY__
+      </p>
       <img src="./__IMAGE_2__" alt="">
     </div>
   </div>
