--- a/template.html
+++ b/template.html
@@ -45,12 +45,13 @@
   <div>
     <h1>Temperature and Humidity 🌡️</h1>
     <p>
-      Current temperature: <b>__TEMPERATURE__°C</b>, humidity: <b>__HUMIDITY__%</b>, measured at <b
+      Current temperature: <b id="current_temp">__TEMPERATURE__°C</b>, humidity: <b id="current_humidity">__HUMIDITY__%</b>, measured at <b
         id="measure_time">__TIMESTAMP__</b>
     </p>
     <p>
       Last update from <i>__HOSTNAME__</i> at <span id="update_time">__NOW__</span>.
     </p>
+    <!--
     <h2>Records 🥵</h2>
     <p>
       Temperature: __All_TIME_TEMPERATURE__
@@ -58,10 +59,14 @@
     <p>
       Humidity: __All_TIME_HUMIDITY__
     </p>
+    -->
     <div>
       <h2>Last 24 Hours ⌛</h2>
       <p>
         Temperature: __TODAY_TEMPERATURE__
+      </p>
+      <p>
+        Humidity: __TODAY_HUMIDITY__
       </p>
       <img src="./__IMAGE_1__" alt="">
     </div>
