--- a/template.html
+++ b/template.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--
   <meta http-equiv="refresh" content="30">
+  -->
   <title>Temperature and Humidity 🌡️</title>
   <style>
     :root {
@@ -102,7 +104,7 @@
         datasets: [{
           label: 'Temperature °C',
           data: temperature,
-          borderWidth: 1
+          tension: 1
         }
         ]
       },
@@ -167,7 +169,7 @@
             type: 'time',
             time: {
               unit: 'day',
-              tooltipFormat: 'yyyy-mm-dd hh:mm:ss',
+              tooltipFormat: 'yyyy-MM-dd HH:mm:ss',
               displayFormats: {
                 day: 'MMM dd, yyyy'
               }
