--- a/template.html
+++ b/template.html
@@ -104,7 +104,17 @@
         datasets: [{
           label: 'Temperature °C',
           data: temperature,
-          tension: 1
+          borderColor: 'rgb(255, 99, 132)',
+          tension: 1,
+          yAxisID: 'y_axis_1',
+
+        },
+        {
+          label: 'Humidity °C',
+          data: humidity,
+          borderColor: 'rgb(54, 162, 235)',
+          tension: 1,
+          yAxisID: 'y_axis_2',
         }
         ]
       },
@@ -138,6 +148,7 @@
     .then(data => {
       const options = {
         scales: {
+
           x: {
             type: 'time',
             time: {
@@ -148,13 +159,18 @@
               }
             },
           },
-          y: {
+          y_axis_1: {
+            position: "left",
+            beginAtZero: false
+          },
+          y_axis_2: {
+            position: "right",
             beginAtZero: false
           }
         }
       };
 
-      data = downsampleByTime(data, 10)
+      data = downsampleByTime(data, 15)
       visualize(data, options, "chart_1");
     })
     .catch(error => console.error('Error fetching data:', error));
@@ -175,9 +191,17 @@
               }
             },
           },
-          y: {
+          y_axis_1: {
+            label: 'Temperature',
+            position: "left",
+            beginAtZero: false
+          },
+          y_axis_2: {
+            label: 'Humidity',
+            position: "right",
             beginAtZero: false
           }
+
         }
       };
 
