--- a/template.html
+++ b/template.html
@@ -102,7 +102,7 @@
       data: {
         labels: timestamps,
         datasets: [{
-          label: 'Temperature °C',
+          label: 'Temperature (°C)',
           data: temperature,
           borderColor: 'rgb(255, 99, 132)',
           tension: 1,
@@ -110,7 +110,7 @@
 
         },
         {
-          label: 'Humidity °C',
+          label: 'Relative Humidity (%)',
           data: humidity,
           borderColor: 'rgb(54, 162, 235)',
           tension: 1,
