--- a/template.html
+++ b/template.html
@@ -89,6 +89,11 @@
         <canvas id="chart_2"></canvas>
       </div>
     </div>
+    <div style="width: 100%; text-align: center;">
+      <small>
+        Copyright &copy; 2024 <a href="https://www.jakobmaier.at">jakobmaier.at</a>
+      </small>
+    </div>
   </div>
 </body>
 <script>
