--- a/template.html
+++ b/template.html
@@ -91,7 +91,7 @@
     </div>
     <div style="width: 100%; text-align: center;">
       <small>
-        Copyright &copy; 2024 <a href="https://www.jakobmaier.at">jakobmaier.at</a>
+        Copyright &copy; 2024 <a href="https://www.jakobmaier.at">www.jakobmaier.at</a>
       </small>
     </div>
   </div>
