--- a/web/page.html
+++ b/web/page.html
@@ -64,20 +64,16 @@
     </p>
 
     <div>
-      <h2>Last 24 Hours ⌛</h2>
+      <h2>Last 24 Hours</h2>
       <p>
         Temperature: __TODAY_TEMPERATURE__
       </p>
       <p>
         Humidity: __TODAY_HUMIDITY__
       </p>
-      <!--
-      <img src="./__IMAGE_1__" alt="">
-      -->
       <div>
         <canvas id="chart_1"></canvas>
       </div>
-
     </div>
     <div>
       <h2>Last 7 Days</h2>
@@ -90,19 +86,15 @@
       <div>
         <canvas id="chart_3"></canvas>
       </div>
-
-    </div>    
+    </div>
     <div>
-      <h2>All Time 📈</h2>
+      <h2>All Time</h2>
       <p>
         Temperature: __All_TIME_TEMPERATURE__
       </p>
       <p>
         Humidity: __All_TIME_HUMIDITY__
       </p>
-      <!--
-      <img src="./__IMAGE_2__" alt="">
-      -->
       <div>
         <canvas id="chart_2"></canvas>
       </div>
